--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,11 @@ HunterGate(
 
 # TODO: rename project and delete this comment
 project(template)
-string(APPEND CMAKE_CXX_FLAGS " -pedantic -Werror -Wall -Wextra")
-string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument")
-string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
+if (UNIX)
+  string(APPEND CMAKE_CXX_FLAGS " -pedantic -Werror -Wall -Wextra")
+  string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument")
+  string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
+endif (UNIX)
 
 hunter_add_package(GTest)
 find_package(GTest CONFIG REQUIRED)
